# json-model

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
cmake/: googletest-download.cmake  googletest.cmake
include/json_model/: error.h  field.h  from_json.h  init.h  model.h  to_json.h  traits.h  types.h  wow.h
test/: CMakeLists.txt  example_first.cpp  example_second.cpp  test_error.cpp  test_from_json.cpp  test_to_json.cpp  test_traits.cpp
